--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Assignment001"
         tools:targetApi="31">
         <activity
+            android:name=".Assignment4"
+            android:exported="false" />
+        <activity
+            android:name=".Assignment3"
+            android:exported="false" />
+        <activity
             android:name=".FinanceTracker"
             android:exported="false" />
         <activity
